--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   date_format: ^2.0.7
   emoji_selector: ^0.0.6
   uuid: ^4.3.3
+  highlight_text: ^1.7.0
 
 dev_dependencies:
   flutter_test:
